# sqlator

./: .gitignore  Cargo.toml  LICENSE.txt  docker-compose.yml  manifest  package.json  pnpm-lock.yaml  progress.md  tmkiou6oskeqinv0iithrjrfqpdu4dup.darc  vite.config.ts
.beads/: metadata.json
core/: Cargo.toml
core/src/: config.rs  credentials.rs  db.rs  error.rs  lib.rs  models.rs
core/src/credentials/: keyring_backend.rs  mod.rs  vault_backend.rs
core/src/db/: any.rs  clickhouse.rs  mod.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs
core/src/docker/: inspector.rs  local.rs  mod.rs
core/src/ssh/: auth.rs  command.rs  config_parser.rs  error.rs  mod.rs  tunnel.rs
docs/: roadmap.txt
docs/brainstorms/: 2026-04-04-docker-container-database-connections-requirements.md  2026-04-08-oracle-driver-fix-requirements.md  2026-04-12-merged-entrypoints-requirements.md  2026-04-13-unified-grid-infinite-scroll-requirements.md
docs/plans/: 2026-04-04-001-feat-sql-client-desktop-mvp-plan.md  2026-04-04-002-feat-enhanced-connection-manager-plan.md  2026-04-04-003-feat-tabbed-interface-enhancement-plan.md  2026-04-04-004-feat-editable-datagrid-sql-generation-plan.md  2026-04-04-005-feat-database-schema-browser-plan.md  2026-04-04-006-feat-tui-mvp-plan.md  2026-04-04-007-feat-web-version-server-mode-plan.md  2026-04-05-001-feat-docker-container-database-connections-plan.md  2026-04-05-002-refactor-database-specific-pools-plan.md  2026-04-05-003-feat-add-database-drivers-plan.md  2026-04-12-001-feat-open-schema-ddl-tab-plan.md  2026-04-12-002-feat-merged-entrypoints-plan.md  2026-04-13-001-feat-tui-url-connection-add-plan.md  2026-04-13-002-feat-unified-grid-infinite-scroll-cte-plan.md  2026-04-13-003-feat-query-history-panel-plan.md  2026-04-14-001-feat-export-results-plan.md  2026-04-14-002-feat-schema-aware-sql-autocomplete-plan.md  2026-04-14-003-feat-explain-query-plan-viewer-plan.md  2026-04-14-004-feat-csv-json-data-import-plan.md  2026-04-14-005-feat-open-save-sql-files-plan.md  2026-04-14-006-feat-erd-relationship-diagram-plan.md  2026-04-14-007-feat-result-set-charting-plan.md  2026-04-14-008-feat-keyboard-shortcut-palette-plan.md  2026-04-14-009-feat-map-visualization-query-results-plan.md  2026-04-14-010-feat-embedded-db-cli-terminal-plan.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  terminal.rs
src/lib/: types.ts
src/lib/api/: adapter.ts  index.ts  tauri-adapter.ts  web-adapter.ts
src/lib/components/: ColorPicker.svelte  ConnectionForm.svelte  ConnectionItem.svelte  ConnectionTabBar.svelte  ContextMenu.svelte  DockerConnectionWizard.svelte  EditorToolbar.svelte  EnhancedGrid.svelte  ErrorDisplay.svelte  GridToolbar.svelte  GroupItem.svelte  ImportDialog.svelte  LoadMoreButton.svelte  QueryTabBar.svelte  ResultGrid.svelte  ResultPane.svelte  SchemaBrowser.svelte  SchemaDdlViewer.svelte  SchemaDropdown.svelte  SchemaNode.svelte  SchemaTree.svelte  Sidebar.svelte  SqlEditor.svelte  SqlPreviewModal.svelte  SshHostDropdown.svelte  SshProfileForm.svelte  SshProfileSelector.svelte  StorageSettings.svelte  TabbedEditor.svelte  TerminalPanel.svelte  ThemeToggle.svelte  (+1 more)
src/routes/: +layout.svelte  +page.svelte
tui-app/: Cargo.toml
tui-app/src/: app.rs  main.rs  ui.rs
web-server/: Cargo.toml
web-server/src/: handlers.rs  main.rs  state.rs  ws_query.rs
(+23 files in other folders)
