[package]
name = "sqlator-core"
version = "0.1.0"
edition = "2021"
description = "Core library for SQLator — database connection management and query execution"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio", "tls-rustls",
    "postgres", "mysql", "sqlite", "any", "json",
    "chrono", "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
dirs = "6"
