[package]
name = "sqlator-core"
version = "0.1.0"
edition = "2021"
description = "Core library for SQLator — database connection management and query execution"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio", "tls-rustls",
    "postgres", "mysql", "sqlite", "any", "json",
    "chrono", "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
dirs = "6"

russh = "0.60"
russh-config = "0.58"
keyring = "3"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "chrono"] }
oracle-rs = "0.1"
deadpool-oracle = "0.1"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
zeroize = "1"
thiserror = "2"
tracing = "0.1"
argon2 = "0.5"
aes-gcm = { version = "0.10", features = ["std"] }
rand = "0.8"
base64 = "0.22"
