[package]
name = "sqlator-app"
version = "0.1.0"
description = "SQLator — Desktop SQL Client"
authors = ["you"]
edition = "2021"

[lib]
name = "sqlator_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sqlator-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
