[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
description = "SQLator web server — browser-accessible SQL admin interface"

[[bin]]
name = "sqlator-web"
path = "src/main.rs"

[dependencies]
sqlator-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"
url = "2"
sqlparser = "0.54"
